# VM

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.old  README.md  VM.cpp  VM.h  VM_binaries.h  VM_confs.h  VM_ext.h  VM_exts.h  VM_functions.cpp  VM_functions.h  assembler.cpp  assembler_functions.cpp  assembler_functions.h  disassembler.cpp  gen_vm_static_dlcall.cpp  includes  libconf  main.cpp  mkcc.cpp  mkll.cpp  repl.cpp  static_libcall.h
CMake/Modules/: FindGMP.cmake  FindGMPXX.cmake  FindReadline.cmake
arduino-examples/: README.md
arduino-examples/HelloWorld/: HelloWorld.ino  VM.h  VMLib.h  VM_confs.h  VM_ext.h  copylibs.sh  exts  input.cpp  random.cpp  value.h
arduino-examples/HelloWorld/libs/random/: VM_exts.h
arduino-examples/Memory/: Memory.ino  VM_confs.h
arduino-examples/Thread/: Thread.ino  VM.cpp  VM_confs.h
exts/class-to-string-support/: class-to-string-support.h
exts/ffi/: CMakeLists.txt  VMFFI.h
exts/function-parameters/: function-parameters.h
exts/named-memory-and-function/: named-memory-and-function.h
hardwares/esp32-runtime/: VM.cpp  VM.h  VM_confs.h  esp32-runtime.ino  input.h  static_libcall.h  upload.js  value.h
hardwares/esp32-runtime/exts/class-to-string-support/: class-to-string-support.h.gch
hardwares/esp32-runtime/exts/ffi/: VMFFI.h
hardwares/esp32-runtime/exts/string-functions/: string-functions.h  string-functions.h.gch
hardwares/esp32-runtime/libs/random/: CMakeLists.txt  VM.h
implementations/java/: Main.java  Makefile  VM.java  VM_JNI.cpp  VM_JNI.h
implementations/py/: Makefile  VM.py  VMPy.cpp  main.py
libs/: Makefile  VMLib.h
libs/input/: CMakeLists.txt  input.cpp  input.h
libs/random/: CMakeLists.txt  random.cpp  random.h
libs/simple-library/: Makefile  simpleStringLib.cpp
libs/test/: CMakeLists.txt  test.cpp  test.h
libs/win-libraries/simple-lib/: main.cpp  simple-lib.pro  test.h
web/: build.sh  pre.js  web.cpp
