cmake_minimum_required(VERSION 3.5)

project(VM LANGUAGES CXX C)

option(USE_GMP_LIB "" ON)
option(USE_READLINE "" ON)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMake/Modules)

include_directories(Value)

foreach(X IN LISTS EXTENTIONS)
    include("exts/${X}/CMakeLists.txt")
endforeach()

if (${CMAKE_SYSTEM_NAME} MATCHES Darwin)
    add_link_options(-dead_strip -dead_strip_dylibs -Os)
endif ()
if (${CMAKE_SYSTEM_NAME} MATCHES Linux)
    add_link_options(-Wl,--gc-sections)
    add_compile_options(-fdata-sections -ffunction-sections)
endif ()

message(${USE_READLINE})

if (USE_READLINE)
    find_package(Readline)
    INCLUDE_DIRECTORIES("${Readline_INCLUDE_DIR}")
    add_definitions(-DUSE_READLINE)
    link_libraries("${Readline_LIBRARY}")
endif()
if (USE_GMP_LIB)
    find_package(GMPXX REQUIRED)
    find_package(GMP REQUIRED)
    INCLUDE_DIRECTORIES("${GMPXX_INCLUDE_DIR}")
    add_definitions(-DUSE_GMP_LIB)
    link_libraries(${GMPXX_LIBRARIES})
    link_libraries(${GMP_LIBRARIES})
    add_executable(VM main.cpp VM.cpp)
    add_executable(repl repl.cpp VM.cpp)
    add_executable(assembler assembler.cpp VM.cpp)
    add_executable(disassembler disassembler.cpp VM.cpp)
    add_executable(mkcc mkcc.cpp VM.cpp)
else()
    include_directories(BigNumber/src/BigNumber)
    add_definitions(-DSTD_INCLUDED)
    add_executable(VM BigNumber/src/BigNumber/number.c BigNumber/src/BigNumber/BigNumber.cpp VM.cpp main.cpp)
    add_executable(repl BigNumber/src/BigNumber/number.c BigNumber/src/BigNumber/BigNumber.cpp VM.cpp repl.cpp)
    add_executable(assembler BigNumber/src/BigNumber/number.c BigNumber/src/BigNumber/BigNumber.cpp VM.cpp assembler.cpp)
    add_executable(disassembler BigNumber/src/BigNumber/number.c BigNumber/src/BigNumber/BigNumber.cpp VM.cpp disassembler.cpp)
    add_executable(mkcc BigNumber/src/BigNumber/number.c BigNumber/src/BigNumber/BigNumber.cpp VM.cpp mkcc.cpp)
endif()
